--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - '*'
-    
+
 jobs:
   linux:
     runs-on: ubuntu-20.04
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: grootcam-linux
-          path: ${{ github.workspace }}/Grootcam.tar.xz
+          path: ${{ github.workspace }}/grootcam.AppImage
 
   windows:
     runs-on: windows-2019
